--- a/extensions/wikia/EditPageLayout/css/EditPageLayout.scss
+++ b/extensions/wikia/EditPageLayout/css/EditPageLayout.scss
@@ -330,7 +330,7 @@ body {
 				min-height: 320px;
 				padding: 10px;
 				position: relative;
-				.banner-notification {
+				.banner-notifications-wrapper {
 					// FB#48494 - change nav2 error styling for modal preview
 					width: auto;
 				}
